Issue #21 home page mobile view content blocks and sponsors alignment

--- a/scss/_modules.scss
+++ b/scss/_modules.scss
@@ -171,6 +171,7 @@
 
 .sponsors {
 	font-size: 0px;
+	text-align: center;
 }
 
 .sponsor {
