--- a/scss/components/_mqueries.scss
+++ b/scss/components/_mqueries.scss
@@ -131,8 +131,9 @@
     /* The Grid --- */
     /*              */
     .row { width: auto; min-width: 0; margin-#{$defaultFloat}: 0; margin-#{$defaultOpposite}: 0; }
-    .column, .columns { width: auto !important; float: none;  }
-    .column:last-child, .columns:last-child { float: none; }
+    .column, .columns { width: auto !important; float: none;}
+    .content-block .column, .content-block .columns { padding:0; padding-bottom:25px; margin-bottom:25px; border-bottom:1px solid #c2c2c2; margin-left:15px; margin-right:15px;}
+    .column:last-child, .columns:last-child { float: none; margin-bottom: 0; border-bottom:none;}
     [class*="column"] + [class*="column"]:last-child { float: none; }
     .column:before, .columns:before, .column:after, .columns:after { content:""; display:table; }
     .column:after, .columns:after { clear: both; }
